# ros_recognizer

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: local_3d_describer.cfg  local_matcher.cfg  refiner.cfg  verifier.cfg  visualizer.cfg
include/ros_recognizer/common/: dynamic_configurator.h  reconfigurable.h
include/ros_recognizer/conversions/: correspondence_ros.h  description_ros.h  hypotheses_ros.h
include/ros_recognizer/description/: local_3d_describer.h  local_3d_description.h
include/ros_recognizer/matching/: hypotheses.h  local_matcher.h
include/ros_recognizer/nodelet/: recognizer.h  viewer.h
include/ros_recognizer/preprocessing/: description_to_ros.h  local_3d_describer.h
include/ros_recognizer/refining/: refiner.h
include/ros_recognizer/verification/: verifier.h
include/ros_recognizer/visualization/: visualizer.h
launch/: recognizer.launch
msg/: Correspondence.msg  CorrespondenceArray.msg  CorrespondenceClusters.msg
src/description/: local_3d_describer.cpp
src/matching/: local_matcher.cpp
src/nodelet/: recognizer.cpp  viewer.cpp
src/preprocessing/: local_3d_describer.cpp
src/refining/: refiner.cpp
src/verification/: verifier.cpp
src/visualization/: visualizer.cpp
srv/: set_model_from_cloud.srv  set_model_from_pcd.srv
test/: test_local_3d_pipeline.cpp  test_preprocessing.cpp
test/data/: README.md  ground_truth_pose.txt  model.pcd
