<?xml version="1.0"?>
<package>
  <name>ros_recognizer</name>
  <version>0.0.1</version>
  <description>The ros_recognizer package</description>

  <maintainer email="olesinski.jakub@gmail.com">Jakub Olesinski</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_recognizer</url> -->
  <author email="olesinski.jakub@gmail.com">Jakub Olesinski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>v4r</build_depend>
  <build_depend>v4r_ros_wrappers</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>v4r</run_depend>
  <run_depend>v4r_ros_wrappers</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>